fix(ux): handles styles on click, handles count of all categories, modifies filter Tracks: https://github.com/openshiftio/openshift.io/issues/3813

--- a/src/app/add-dependency/add-dependency.component.less
+++ b/src/app/add-dependency/add-dependency.component.less
@@ -159,6 +159,11 @@
 
 #PackagePreview {
     margin-top: 45px;
+
+    .active-category {
+        border-left: 5px solid #0088ce;
+    }
+
     .browse-modal {
         .modal-title {
             font-size: 16px;
